--- a/.github/workflows/python-code-quality-include.yaml
+++ b/.github/workflows/python-code-quality-include.yaml
@@ -24,10 +24,8 @@ jobs:
 
     - name: Lint with flake8
       run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --ignore=E203 --max-line-length=127 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        flake8_ignored="E203,E401,E402"
+        flake8 . --count --ignore=$flake8_ignored --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
     - name: Lint with pylint
       run: |
