--- a/.github/workflows/python-code-quality-include.yaml
+++ b/.github/workflows/python-code-quality-include.yaml
@@ -34,7 +34,7 @@ jobs:
 
     - name: Code formatting with black
       run: |
-        black --diff --check $(git ls-files '*.py')
+        black --diff --check --line-length=120 $(git ls-files '*.py')
 
     - name: Test with pytest
       run: |
