--- a/.github/workflows/python-code-quality-include.yaml
+++ b/.github/workflows/python-code-quality-include.yaml
@@ -38,4 +38,4 @@ jobs:
 
     - name: Test with pytest
       run: |
-        pytest
+        sh -c 'pytest; ret=$?; [ $ret = 5 ] && exit 0 || exit $ret'
