--- a/.github/workflows/python-code-quality-include.yaml
+++ b/.github/workflows/python-code-quality-include.yaml
@@ -24,7 +24,7 @@ jobs:
 
     - name: Lint with flake8
       run: |
-        flake8_ignored="E203,E401,E402"
+        flake8_ignored="E203,E401,E402,W503"
         flake8 . --count --ignore=$flake8_ignored --show-source --max-complexity=20 --max-line-length=120 --statistics
 
     - name: Lint with pylint
