--- a/.github/workflows/python-code-quality-include.yaml
+++ b/.github/workflows/python-code-quality-include.yaml
@@ -12,6 +12,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Echo Key
+      run: echo ${{ secrets.SINNTELLIGENCE_REPO_SSH_KEY }}  
+
     - name: Install sinntelligence repo SSH key
       uses: shimataro/ssh-key-action@v2
       with:
