--- a/.github/workflows/python-code-quality-include.yaml
+++ b/.github/workflows/python-code-quality-include.yaml
@@ -53,4 +53,5 @@ jobs:
 
     - name: Test with pytest
       run: |
+        if [ ! -d test ]; then mkdir test; fi
         sh -c 'python -m pytest test; ret=$?; [ $ret = 5 ] && exit 0 || exit $ret'
