--- a/.github/workflows/python-code-quality-include.yaml
+++ b/.github/workflows/python-code-quality-include.yaml
@@ -25,6 +25,9 @@ jobs:
       with:
         python-version: "3.10"
 
+    - name: Update python
+      run: sudo apt update
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
