--- a/.github/workflows/github-ci-dvc-training-include.yaml
+++ b/.github/workflows/github-ci-dvc-training-include.yaml
@@ -10,6 +10,8 @@ on:
         required: true
       DVC_STUDIO_TOKEN:
         required: true
+      CML_REPO_TOKEN:
+        required: true
       GITHUB_TOKEN:
         required: true
 
