--- a/.github/workflows/github-ci-dvc-training-include.yaml
+++ b/.github/workflows/github-ci-dvc-training-include.yaml
@@ -62,8 +62,7 @@ jobs:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           STUDIO_TOKEN: ${{ secrets.DVC_STUDIO_TOKEN_MFB }}
           STUDIO_REPO_URL: git@github.com:${{ github.repository }}.git
-          DVCLIVE_LOGLEVEL: DEBUG
-          #MKL_SERVICE_FORCE_INTEL: 1
+          DVCLIVE_LOGLEVEL: INFO  # or: DEBUG
         run: |
           # Initialise workspace
           pip install -r src/dvc/requirements.txt
