--- a/.github/workflows/python-code-quality-include.yaml
+++ b/.github/workflows/python-code-quality-include.yaml
@@ -3,10 +3,7 @@
 name: General Python code quality
 
 on:
-  workflow_call:
-    outputs:
-      firstword:
-        description: "The first output string"
+  push:
 
 env:
   TISCAMERA_DL_LINK_LATEST: https://github.com/TheImagingSource/tiscamera/releases/download/v-tiscamera-1.1.1/tiscamera_1.1.1.4142_amd64_ubuntu_1804.deb
