--- a/.github/workflows/python-code-quality-include.yaml
+++ b/.github/workflows/python-code-quality-include.yaml
@@ -42,4 +42,4 @@ jobs:
     - name: Test with pytest
       run: |
         if [ ! -d test ]; then mkdir test; fi
-        sh -c 'python -m pytest test -k "test_camera_stream_timeout or pyside"; ret=$?; [ $ret = 5 ] && exit 0 || exit $ret'
+        sh -c 'python -m pytest test -k "test_camera_manager"; ret=$?; [ $ret = 5 ] && exit 0 || exit $ret'
