--- a/.github/workflows/python-code-quality-include.yaml
+++ b/.github/workflows/python-code-quality-include.yaml
@@ -29,27 +29,27 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install flake8 pylint pytest black
 
-    - name: Lint with flake8
-      run: |
-        if [ ! -f .ci/flake8 ]; then touch .ci/flake8; fi
-        flake8_ignored="E203,E401,E402,W503"
-        flake8 . --config .ci/flake8 --count --ignore=$flake8_ignored --show-source --max-complexity=20 --max-line-length=120 --statistics
+    # - name: Lint with flake8
+    #   run: |
+    #     if [ ! -f .ci/flake8 ]; then touch .ci/flake8; fi
+    #     flake8_ignored="E203,E401,E402,W503"
+    #     flake8 . --config .ci/flake8 --count --ignore=$flake8_ignored --show-source --max-complexity=20 --max-line-length=120 --statistics
 
-    - name: Lint with pylint
-      run: |
-        if [ ! -f .ci/pylintrc ]; then touch .ci/pylintrc; fi
-        pylint_disabled="W0613,R0903,R0913,R0914,C0103,F0401,R0902,C0413,C0411,W0703,R1723,R1734,R1735,R1728,W1514,R0912,W1203,R0801,R0201,R0022,W0719"
-        pylint --rcfile=.ci/pylintrc --jobs=0 --disable=$pylint_disabled --max-line-length=120 --enable=unused-import $(git ls-files '*.py')        
+    # - name: Lint with pylint
+    #   run: |
+    #     if [ ! -f .ci/pylintrc ]; then touch .ci/pylintrc; fi
+    #     pylint_disabled="W0613,R0903,R0913,R0914,C0103,F0401,R0902,C0413,C0411,W0703,R1723,R1734,R1735,R1728,W1514,R0912,W1203,R0801,R0201,R0022,W0719"
+    #     pylint --rcfile=.ci/pylintrc --jobs=0 --disable=$pylint_disabled --max-line-length=120 --enable=unused-import $(git ls-files '*.py')        
 
-    - name: Code formatting with black
-      run: |
-        if [ ! -f .ci/black ]; then touch .ci/black; fi
-        black --config .ci/black --diff --check --line-length=120 $(git ls-files '*.py')
+    # - name: Code formatting with black
+    #   run: |
+    #     if [ ! -f .ci/black ]; then touch .ci/black; fi
+    #     black --config .ci/black --diff --check --line-length=120 $(git ls-files '*.py')
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    # - name: Install dependencies
+    #   run: |
+    #     python -m pip install --upgrade pip
+    #     if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Run CI setup shell script
       run: |
@@ -67,4 +67,4 @@ jobs:
         SINNTELLIGENCE_MP_CONTEXT: "forkserver"
       run: |
         if [ ! -d test ]; then mkdir test; fi
-        sudo runuser -l ci_user -c 'python -m pytest test; ret=$?; [ $ret = 5 ] && exit 0 || exit $ret'
+        sudo runuser -l ci_user -c 'python -m pytest test/unit -k anvil; ret=$?; [ $ret = 5 ] && exit 0 || exit $ret'
