--- a/.github/workflows/python-code-quality-include.yaml
+++ b/.github/workflows/python-code-quality-include.yaml
@@ -28,6 +28,7 @@ jobs:
         sudo apt update
         python -m pip install --upgrade pip
         python -m pip install flake8 pylint pytest black
+        echo "PYTHON_PATH=$(which python)" >> $GITHUB_ENV
 
     - name: Lint with flake8
       run: |
@@ -67,4 +68,4 @@ jobs:
         SINNTELLIGENCE_MP_CONTEXT: "forkserver"
       run: |
         if [ ! -d test ]; then mkdir test; fi
-        sudo runuser -l ci_user -c 'python -m pytest test/unit -k anvil; ret=$?; [ $ret = 5 ] && exit 0 || exit $ret'
+        sudo runuser -l ci_user -c 'export PATH=$PYTHON_PATH:$PATH && python -m pytest test/unit -k anvil; ret=$?; [ $ret = 5 ] && exit 0 || exit $ret'
