--- a/.github/workflows/python-code-quality-include.yaml
+++ b/.github/workflows/python-code-quality-include.yaml
@@ -28,6 +28,7 @@ jobs:
         sudo apt update
         python -m pip install --upgrade pip
         python -m pip install flake8 pylint pytest black
+        ls src/skicheck/anvil_head_skicheck
 
     # - name: Lint with flake8
     #   run: |
