--- a/.github/workflows/python-code-quality-include.yaml
+++ b/.github/workflows/python-code-quality-include.yaml
@@ -37,37 +37,38 @@ jobs:
         sudo apt update
         python -m pip install --upgrade pip
         python -m pip install flake8 pylint pytest black
-        ls src/skicheck/anvil_head_skicheck
-    
-    - name: clone submodule
+
+    # Unfortunately github actions cannot checkout private submodule out-of-the-box. 
+    # The workaround is to manually clone each submodule into its correct folder. 
+    # We do that by parsing the .gitmodules file for URLs and Folders and using the SSH key stored in ~/.ssh/id_rsa for authentication.
+    - name: clone submodules
       run: |
-        URLS=$(git config --file .gitmodules --get-regexp 'submodule\..*\.url' | awk '{ print $2 }' | tr -d '\n' | sed 's/https:\/\/github.com\//git@github.com:/')
-        PATHS=$(git config --file .gitmodules --get-regexp 'submodule\..*\.path' | awk '{ print $2 }' | tr -d '\n')
-        echo $URLS
-        for i in "${!URLS[@]}"; do
-          echo "cloning.."
-          echo "URL=${URLS[$i]}"
-          echo "PATH=${PATHS[$i]}"
-          GIT_SSH_COMMAND='ssh -i ~/.ssh/id_rsa' git clone "${URLS[$i]}" "${PATHS[$i]}"
-          ls "${PATHS[$i]}"
-        done
+        if [ -f .gitmodules ]; then
+          URLS=$(git config --file .gitmodules --get-regexp 'submodule\..*\.url' | awk '{ print $2 }' | tr -d '\n' | sed 's/https:\/\/github.com\//git@github.com:/')
+          PATHS=$(git config --file .gitmodules --get-regexp 'submodule\..*\.path' | awk '{ print $2 }' | tr -d '\n')
+          echo $URLS
+          for i in "${!URLS[@]}"; do
+            echo Cloning submodule from ${URLS[$i]} into "${PATHS[$i]}"
+            GIT_SSH_COMMAND='ssh -i ~/.ssh/id_rsa' git clone "${URLS[$i]}" "${PATHS[$i]}"
+          done
+        fi
 
-    # - name: Lint with flake8
-    #   run: |
-    #     if [ ! -f .ci/flake8 ]; then touch .ci/flake8; fi
-    #     flake8_ignored="E203,E401,E402,W503"
-    #     flake8 . --config .ci/flake8 --count --ignore=$flake8_ignored --show-source --max-complexity=20 --max-line-length=120 --statistics
+    - name: Lint with flake8
+      run: |
+        if [ ! -f .ci/flake8 ]; then touch .ci/flake8; fi
+        flake8_ignored="E203,E401,E402,W503"
+        flake8 . --config .ci/flake8 --count --ignore=$flake8_ignored --show-source --max-complexity=20 --max-line-length=120 --statistics
 
-    # - name: Lint with pylint
-    #   run: |
-    #     if [ ! -f .ci/pylintrc ]; then touch .ci/pylintrc; fi
-    #     pylint_disabled="W0613,R0903,R0913,R0914,C0103,F0401,R0902,C0413,C0411,W0703,R1723,R1734,R1735,R1728,W1514,R0912,W1203,R0801,R0201,R0022,W0719"
-    #     pylint --rcfile=.ci/pylintrc --jobs=0 --disable=$pylint_disabled --max-line-length=120 --enable=unused-import $(git ls-files '*.py')        
+    - name: Lint with pylint
+      run: |
+        if [ ! -f .ci/pylintrc ]; then touch .ci/pylintrc; fi
+        pylint_disabled="W0613,R0903,R0913,R0914,C0103,F0401,R0902,C0413,C0411,W0703,R1723,R1734,R1735,R1728,W1514,R0912,W1203,R0801,R0201,R0022,W0719"
+        pylint --rcfile=.ci/pylintrc --jobs=0 --disable=$pylint_disabled --max-line-length=120 --enable=unused-import $(git ls-files '*.py')        
 
-    # - name: Code formatting with black
-    #   run: |
-    #     if [ ! -f .ci/black ]; then touch .ci/black; fi
-    #     black --config .ci/black --diff --check --line-length=120 $(git ls-files '*.py')
+    - name: Code formatting with black
+      run: |
+        if [ ! -f .ci/black ]; then touch .ci/black; fi
+        black --config .ci/black --diff --check --line-length=120 $(git ls-files '*.py')
 
     - name: Install dependencies
       run: |
@@ -84,4 +85,4 @@ jobs:
         SINNTELLIGENCE_MP_CONTEXT: "forkserver"
       run: |
         if [ ! -d test ]; then mkdir test; fi
-        sh -c 'python -m pytest test -k test_get_camera_types; ret=$?; [ $ret = 5 ] && exit 0 || exit $ret'
+        sh -c 'python -m pytest test; ret=$?; [ $ret = 5 ] && exit 0 || exit $ret'
