--- a/.github/workflows/python-code-quality-include.yaml
+++ b/.github/workflows/python-code-quality-include.yaml
@@ -82,6 +82,7 @@ jobs:
     - name: Test with pytest
       env:
         SINNTELLIGENCE_MP_CONTEXT: "forkserver"
+        GENICAM_GENTL64_PATH: "/usr/lib/ids/cti"
       run: |
         if [ ! -d test ]; then mkdir test; fi
         sh -c 'python -m pytest test; ret=$?; [ $ret = 5 ] && exit 0 || exit $ret'
